--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,39 @@
-<p>nav-bar works!</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>SistemaRh</title>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" style="cursor: pointer;">
+            <img src="../../assets/smartbreederWhiteLogo-p-500.png" height="40" width="200" alt="" class="d-inline-block">
+          </a>
+      <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"  data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div  [ngbCollapse]="isCollapsed" class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link text-white" style="cursor: pointer;">Inscrição</a>
+            </li>
+            <li ngbDropdown class="nav-item dropdown">
+                <a ngbDropdownToggle class="nav-link dropdown-toggle text-white " id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Administração
+                </a>
+                <ul ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><button class="dropdown-item">Candidatos</button></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><button class="dropdown-item">Vagas</button></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><button class="dropdown-item">Linguagens</button></li>
+                </ul>
+            </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+</body>
+</html>
