--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -23,10 +23,9 @@
             <p>Aplicação desenvolvida para a segunda edição do ACADEMY CODING</p>
         </div>
         <div class="text-center" style="margin-top: 4rem;">
-            <a class="btn btn-lg btn-dark ">Ir para projeto</a>
+            <a class="btn btn-lg btn-dark " (click)="loginRoute()">Ir para projeto</a>
         </div>
     </div>
     <app-footer> </app-footer>
 </body>
-
 </html>
