--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -14,7 +14,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div  [ngbCollapse]="isCollapsed" class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-        <ul *ngIf="0>1" class="nav">
+        <ul *ngIf="mostrarMenu" class="nav">
             <li class="nav-item">
                 <a class="nav-link text-white" style="cursor: pointer;">Inscrição</a>
             </li>
