--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
-<footer class="footer mt-auto py-3 bg-dark" style="position: absolute; bottom: 0; width: 100%; text-align: center;">
+<footer class="footer mt-auto py-3 bg-dark" style="position: fixed; bottom: 0; width: 100%; text-align: center;">
     <div class="container">
-      <p class="text-light"><a href="https://github.com/ViniciusMsq"><img src="../../assets/iconmonstr-github-1.svg " alt="" width="28" height="28"></a>&nbsp;App desenvolvido por Vinicius Mesquini
-        &nbsp; 
+      <p class="text-light"><a href="https://github.com/ViniciusMsq"><img src="../../assets/iconmonstr-github-1.svg " alt="" width="28" height="28"></a>
+        &nbsp; App desenvolvido por Vinicius Mesquini &nbsp;
         <a href="https://www.linkedin.com/in/vinicius-mesquini/" target="_new"><img src="../assets/Linkedin.svg" alt=""></a>
       </p>
     </div>
-  </footer>
+</footer>
