Ajustes do backend

--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="footer mt-auto py-3 bg-dark" style="position: fixed; bottom: 0; width: 100%; text-align: center;">
-    <div class="container">
+<footer class="footer mt-auto py-3 bg-dark" style="position: fixed; bottom: 0;text-align: center; width: 100%;">
+    <div class="container" > 
       <p class="text-light"><a href="https://github.com/ViniciusMsq"><img src="../../assets/iconmonstr-github-1.svg " alt="" width="28" height="28"></a>
         &nbsp; App desenvolvido por Vinicius Mesquini &nbsp;
         <a href="https://www.linkedin.com/in/vinicius-mesquini/" target="_new"><img src="../assets/Linkedin.svg" alt=""></a>
