--- a/frontend/src/app/cad-equipes/cad-equipes.component.html
+++ b/frontend/src/app/cad-equipes/cad-equipes.component.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipes</title>
     <base href="/cadastrar-equipes">
 </head>
-<body>
-    <hr class="dropdown-divider">
+<body class="bg-light" >
+  <hr class="dropdown-divider">
 
-    <h2 class="d-flex justify-content-center">Cadastrar</h2>
-    <div class="d-flex justify-content-center">
+    <h2 class="d-flex justify-content-center">Cadastrar Equipes</h2>
+    <div class="d-flex justify-content-center" style="margin-top: 20px;">
       <form>
           <div class="form-row">
             <div class="form-group col">
-              <label>Nome da equipe</label>
-              <input type="text" class="form-control" placeholder="Nome" id="nome" name="nome" [(ngModel)]="equipe.descricao">
+              <label for="nome">Nome da equipe</label>
+              <input type="text" class="form-control" placeholder="Ex: Desenvolvimento" id="nome" name="nome" maxlength="100" [(ngModel)]="equipe.descricao">
             </div>
           </div>
           <div class="d-flex justify-content-center"> 
-            <button type="submit" class="btn btn-primary" (click)="cadastrar()">Cadastrar</button>
+            <button type="submit" class="btn btn-primary" (click)="cadastrar()" style="margin-top: 1rem;">Cadastrar</button>
         </div>
         </form>
     </div>
@@ -28,24 +26,29 @@
     <hr class="dropdown-divider">
     <br>
     <h3 class="d-flex justify-content-center">Equipes cadastradas</h3>
-    <table class="table table-striped">
-      <tr>
-        <th>#id</th>
-        <th>Nome</th>
-        <th>Ações</th>
-      </tr>
-      <tr *ngFor="let equipe of equipes">
-        <td>{{equipe.id}}</td>
-        <td>{{equipe.descricao}}</td>
-        <td class="overflow-hidden">
+
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th scope="col">#Id</th>
+          <th scope="col">descrição</th>
+          <th scope="col">Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let equipe of equipes">
+          <th scope="row">{{equipe.id}}</th>
+          <td>{{equipe.descricao}}</td>
+          <td class="overflow-hidden"> 
             <div ngbDropdown container="body">
               <button class="btn btn-outline-primary btn-sm" ngbDropdownToggle>♠</button>
               <div ngbDropdownMenu>
                 <button ngbDropdownItem (click)="atualizar(equipe.id)">Atualizar</button>
+              </div>
             </div>
-          </div>
-        </td>
-      </tr>
+          </td>
+        </tr>
+      </tbody>
     </table>
 </body>
 </html>
