--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
     <title>Dashboard</title>
     <base href="/dashboard">
 </head>
-<body>
-    {{id}}
+<body class="bg-light">
+    <h1> -> Dashboard</h1>
 </body>
 </html>
