--- a/frontend/src/app/cad-equipes/cad-equipes.component.html
+++ b/frontend/src/app/cad-equipes/cad-equipes.component.html
@@ -9,47 +9,49 @@
   <hr class="dropdown-divider">
 
     <h2 class="d-flex justify-content-center">Cadastrar Equipes</h2>
-    <div class="d-flex justify-content-center" style="margin-top: 20px;">
-      <form>
-          <div class="form-row">
-            <div class="form-group col">
-              <label for="nome">Nome da equipe</label>
-              <input type="text" class="form-control" placeholder="Ex: Desenvolvimento" id="nome" name="nome" maxlength="100" [(ngModel)]="equipe.descricao">
-            </div>
+    <div class="container-fluid">
+        <div class="container">
+            <div style="margin-left: 25%; margin-right: 25%;">
+                <form class="row g-3">
+                    <div class="col-12">
+                        <label for="inputDescricao" class="form-label">Descrição da equipe</label>
+                        <input type="text" class="form-control" id="inputDescricao" name="inputDescricao" placeholder="Ex: Desenvolvimento" [(ngModel)]="equipe.descricao">
+                    </div>
+                    <div class="d-flex justify-content-end"> 
+                        <button type="submit" class="btn btn-dark" (click)="cadastrar()" style="margin-top: 1rem;">Salvar</button>
+                    </div>
+                </form>
           </div>
-          <div class="d-flex justify-content-center"> 
-            <button type="submit" class="btn btn-primary" (click)="cadastrar()" style="margin-top: 1rem;">Cadastrar</button>
         </div>
-        </form>
-    </div>
-    <br>
-    <hr class="dropdown-divider">
-    <br>
-    <h3 class="d-flex justify-content-center">Equipes cadastradas</h3>
+      <br>
+      <hr class="dropdown-divider">
+      <br>
+      <h3 class="d-flex justify-content-center">Equipes</h3>
 
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th scope="col">#Id</th>
-          <th scope="col">descrição</th>
-          <th scope="col">Ações</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let equipe of equipes">
-          <th scope="row">{{equipe.id}}</th>
-          <td>{{equipe.descricao}}</td>
-          <td class="overflow-hidden"> 
-            <div ngbDropdown container="body">
-              <button class="btn btn-outline-primary btn-sm" ngbDropdownToggle>♠</button>
-              <div ngbDropdownMenu>
-                <button ngbDropdownItem (click)="atualizar(equipe.id)">Atualizar</button>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#Id</th>
+            <th scope="col">descrição</th>
+            <th scope="col">Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let equipe of equipes">
+            <th scope="row">{{equipe.id}}</th>
+            <td>{{equipe.descricao}}</td>
+            <td class="overflow-hidden"> 
+              <div ngbDropdown container="body">
+                <button class="btn btn-outline-primary btn-sm" ngbDropdownToggle>♠</button>
+                <div ngbDropdownMenu>
+                  <button ngbDropdownItem (click)="atualizar(equipe.id)">Atualizar</button>
+                </div>
               </div>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 </body>
 </html>
 
