--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -20,7 +20,7 @@
       <div [ngbCollapse]="isCollapsed" class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul *ngIf="mostrarMenu" class="nav">
           <li *ngIf="gestor" ngbDropdown class="nav-item dropdown">
-            <a ngbDropdownToggle class="nav-link dropdown-toggle text-white " id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a ngbDropdownToggle class="nav-link dropdown-toggle text-white " id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-right: 3rem;">
               Gestão
             </a>
             <ul ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -38,9 +38,6 @@
               </li>
               <li><button class="dropdown-item" (click)="cadAtividadesRoute()">Atividades</button></li>
             </ul>
-          </li>
-          <li *ngIf="gestor" class="nav-item">
-            <a class="nav-link text-white" style="cursor: pointer;">Inscrição</a>
           </li>
 
         </ul>
