--- a/frontend/src/app/bar-chart/bar-chart.component.html
+++ b/frontend/src/app/bar-chart/bar-chart.component.html
@@ -1,8 +1,9 @@
-<div style="text-align:center">
-    <apx-chart
+<div style="text-align:center; width: 400px; height: 300px;">
+  
+  <apx-chart
       [series]="chartOptions.series"
       [chart]="chartOptions.chart"
       [xaxis]="chartOptions.xaxis"
       [title]="chartOptions.title"
     ></apx-chart>
-  </div>
+</div>
