--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -10,6 +10,9 @@
 </head>
 
 <body class="bg-light">
+    <div class="imgBack"> 
+        <img src="../../assets/background.png" width="500" height="500">    
+    </div>
     <div class="container" style="position: relative;">
         <div class="jumbotron text-center" style="margin-top: 5rem; padding-bottom: 100px;">
             <h1 class="display-4" style="align-items: center;">Cronograma e Gerenciamento de Atividades</h1>
