--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -16,7 +16,7 @@
   <br><br><br><br>
   <div class="d-flex justify-content-center">
     <form class="form-signin">
-      <img class="mb-4" src="../../assets/login.svg" alt="" width="100" height="100">
+      <img  src="../../assets/security.png" alt="" width="280" >
       
       <h2 class="h3 mb-3 font-weight-normal">Por favor, faça seu login.</h2>
       <hr>
