--- a/frontend/src/app/bar-chart/bar-chart.component.html
+++ b/frontend/src/app/bar-chart/bar-chart.component.html
@@ -1,5 +1,4 @@
-<div style="text-align:center; width: 400px; height: 300px;">
-  
+<div >
   <apx-chart
       [series]="chartOptions.series"
       [chart]="chartOptions.chart"
