--- a/frontend/src/app/donut-chart/donut-chart.component.html
+++ b/frontend/src/app/donut-chart/donut-chart.component.html
@@ -1,9 +1,9 @@
-<div style="width: 450px; height: 450px;">
+<div>
     <apx-chart
         [labels] = "options.labels"
         [series] = "options.series"
         [chart]  = "options.chart"
-        [plotOptions] = "options.plotOptions.pie.donut"
+        [plotOptions] = "options.plotOptions"
     >
     </apx-chart>
 </div>
